[gd_scene load_steps=13 format=3 uid="uid://b5heeqig4y3my"]

[ext_resource type="Script" path="res://hero.gd" id="1_xysyd"]
[ext_resource type="Texture2D" uid="uid://cyruqewc6ubgb" path="res://SPRITEBASE_V2.png" id="2_wcxf1"]
[ext_resource type="Texture2D" uid="uid://gjwjvped5yjf" path="res://smallbox.png" id="3_iprlq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ji5il"]
radius = 5.0
height = 20.0

[sub_resource type="Animation" id="Animation_7ax4l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c3q4w"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_bvtbt"]
resource_name = "init_jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [16, 17, 18]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_end_init_jump"
}]
}

[sub_resource type="Animation" id="Animation_p2xed"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_cp65s"]
resource_name = "push"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_m1csj"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5g6rc"]
_data = {
"RESET": SubResource("Animation_7ax4l"),
"idle": SubResource("Animation_c3q4w"),
"init_jump": SubResource("Animation_bvtbt"),
"jump": SubResource("Animation_p2xed"),
"push": SubResource("Animation_cp65s"),
"run": SubResource("Animation_m1csj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bdqlh"]
radius = 12.0
height = 26.0

[node name="Hero" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 5
safe_margin = 0.1
script = ExtResource("1_xysyd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wcxf1")
centered = false
offset = Vector2(-16, -32)
hframes = 8
vframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_ji5il")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_5g6rc")
}

[node name="BoxDetector" type="RayCast2D" parent="."]
position = Vector2(0, -9)
target_position = Vector2(9, 0)
collision_mask = 4

[node name="LaserStart" type="Node2D" parent="."]
position = Vector2(5, -21)

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_bdqlh")

[node name="CarriedBox" type="Sprite2D" parent="."]
modulate = Color(0.635294, 0.635294, 0.635294, 1)
position = Vector2(3, -13)
texture = ExtResource("3_iprlq")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(0, -48)
